--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,23 @@
 /.cache
 /mess
 /gnome
+/tmp
+/win
+/smb
+/src
+/.gvfs
 /.darcs/cache
 /.conkeror.mozdev.org*
+/.mozilla
 /.emacs.d/lisp/darcsum
 /.plt-scheme/*/doc
 /.quack/srfi
 /.zsh/cache
 /.emacs.d/desktop
+/.arch-cache
+/.ccache
+/.gconf
+/.ipython
+/.system
+/.macromedia
+/.thumbnails
