--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 /win
 /smb
 /src
+/ipod
+/irclogs
+/music
+/Music
+
 /.gvfs
 /.darcs/cache
 /.conkeror.mozdev.org*
@@ -27,4 +32,5 @@
 /.openoffice.org2
 /.purple
 /.slocdata
+
 
